# capital_management

./: .env.example  API_CONTRACT.md  CLAUDE.backend.md  DATA_MODEL.md  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
app/: main.py
app/api/: accounts.py  assets.py  auth.py  goals.py  holdings.py  liabilities.py  prices.py  reports.py  settings.py  snapshots.py  transactions.py
app/core/: config.py  db.py  deps.py  errors.py  pagination.py  security.py
app/jobs/: snapshot_job.py
app/models/: __init__.py  account.py  asset.py  assumptions.py  audit_log.py  base.py  goal.py  inflation_rate.py  liability.py  liability_event.py  lot.py  lot_consumption.py  portfolio_snapshot.py  price.py  transaction.py  transaction_leg.py  user.py
app/schemas/: account.py  allocation.py  asset.py  assumptions.py  auth.py  common.py  goal.py  holding.py  inflation.py  liability.py  performance.py  pnl.py  price.py  projection.py  snapshot.py  transaction.py  user.py
app/services/: account_service.py  allocation.py  asset_service.py  assumptions.py  audit.py  (+15 more)
migrations/: env.py
scripts/: export_openapi.py
tests/: conftest.py  test_accounts.py  test_allocation.py  test_assets.py  test_auth.py  test_dual_currency.py  test_fifo.py  test_goals.py  test_holdings.py  test_inflation.py  test_liabilities.py  test_lot_rebuild.py  test_net_worth.py  test_performance.py  test_pnl_report.py  test_prices.py  test_projection.py  test_reconciliation.py  test_scope.py  test_snapshots.py  test_transactions.py  test_transfer_costbasis.py  test_valuation_holdings.py
(+6 files in other folders)
